[tool.poetry]
name = "TornadoCliff"
version = "0.1.0"
description = "A variation of Gymnasium's CliffWalking enviroment."
authors = ["Daniel Ávila Vera <davera.017@gmail.com>"]
repository = "https://github.com/factoredai/tornadocliff-env"
documentation = "https://github.com/factoredai/tornadocliff-env"
readme = "README.md"
license = "MIT"
keywords = ["Reinforcement Learning", "RL", "CliffWalking", "gymnasium", "gym"]
packages = [{ include = "tornadocliff_env", from = "src" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.3"
gymnasium = {extras = ["toy-text"], version = ">=1.0.0"}
pygame = "2.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
isort = "5.12.0"
black = "23.3.0"
flake8-pyproject = "1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linters
[tool.flake8]
ignore = ["E226","E302","E41"]
max-line-length = 120
exclude = ["tests/*"]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = ["W503"]

[tool.black]
safe = true
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["src", "tests", "docs/scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
