[project]
name = "TornadoCliff"
version = "0.1.0"
description = "A variation of Gymnasium's CliffWalking enviroment."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Daniel Ãvila Vera", email = "davera.017@gmail.com" }]
keywords = ["Reinforcement Learning", "RL", "CliffWalking", "gymnasium", "gym"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.3",
    "gymnasium[toy-text]>=1.0.0",
    "pygame>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "flake8==6.0.0",
    "isort==5.12.0",
    "black==23.3.0",
    "flake8-pyproject==1.2.3",
]

[project.urls]
repository = "https://github.com/factoredai/tornadocliff-env"
documentation = "https://github.com/factoredai/tornadocliff-env"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tornadocliff_env"]

# Linters
[tool.flake8]
ignore = ["E226","E302","E41"]
max-line-length = 120
exclude = ["tests/*"]
extend-ignore = ["W503"]

[tool.black]
safe = true
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["src", "tests", "docs/scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
